--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@babel/preset-env": "^7.6.2",
         "@babel/preset-react": "^7.0.0",
         "babel-loader": "^8.0.6",
+        "file-loader": "^4.2.0",
         "lodash": "^4.17.4",
         "react": "^16.10.1",
         "react-dom": "^16.10.1",
